--- a/eTools Ultimate/Views/Pages/Quest/QuestPage.xaml
+++ b/eTools Ultimate/Views/Pages/Quest/QuestPage.xaml
@@ -7,25 +7,224 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     Title="QuestPage"
-    d:DataContext="{d:DesignInstance local:QuestPage,
-                                     IsDesignTimeCreatable=False}"
+    d:DataContext="{d:DesignInstance local:QuestPage, IsDesignTimeCreatable=False}"
     d:DesignHeight="768"
     d:DesignWidth="1024"
     ui:Design.Background="{DynamicResource ApplicationBackgroundBrush}"
     ui:Design.Foreground="{DynamicResource TextFillColorPrimaryBrush}"
     Foreground="{DynamicResource TextFillColorPrimaryBrush}"
-    ScrollViewer.CanContentScroll="False"
     mc:Ignorable="d">
 
     <Grid>
-        <StackPanel 
-            VerticalAlignment="Center" 
-            HorizontalAlignment="Center">
-            <TextBlock 
-                Text="Coming soon..." 
-                FontSize="36" 
-                FontWeight="Light"
-                Foreground="{DynamicResource TextFillColorSecondaryBrush}"/>
-        </StackPanel>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+
+        <!-- Linke Seite -->
+        <ScrollViewer Grid.Column="0" VerticalScrollBarVisibility="Auto">
+            <Grid Margin="10">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+
+                <!-- General Section -->
+                <TextBlock Text="General" Foreground="#00A2FF" FontSize="16" Margin="0,0,0,10"/>
+                
+                <Grid Grid.Row="1">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="Auto"/>
+                    </Grid.RowDefinitions>
+
+                    <TextBlock Text="ID" Grid.Row="0" Grid.Column="0" Margin="0,0,10,5" VerticalAlignment="Center"/>
+                    <TextBlock Text="138" Grid.Row="0" Grid.Column="1" Margin="0,0,0,5"/>
+
+                    <TextBlock Text="Title" Grid.Row="1" Grid.Column="0" Margin="0,0,10,5" VerticalAlignment="Center"/>
+                    <TextBox Text="Door of Dark" Grid.Row="1" Grid.Column="1" Margin="0,0,0,5" Background="#333333"/>
+
+                    <TextBlock Text="Category" Grid.Row="2" Grid.Column="0" Margin="0,0,10,5" VerticalAlignment="Center"/>
+                    <ComboBox Text="General" Grid.Row="2" Grid.Column="1" Margin="0,0,0,5" Background="#333333"/>
+
+                    <StackPanel Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Orientation="Horizontal" Margin="0,5">
+                        <CheckBox Content="Repeat" Margin="0,0,10,0"/>
+                        <CheckBox Content="Remove" Margin="0,0,10,0"/>
+                        <CheckBox Content="Hide Reward Information"/>
+                    </StackPanel>
+
+                    <TextBlock Text="Begin NPC" Grid.Row="4" Grid.Column="0" Margin="0,5,10,5" VerticalAlignment="Center"/>
+                    <ComboBox Text="masa_saimayor" Grid.Row="4" Grid.Column="1" Margin="0,5,0,5" Background="#333333"/>
+
+                    <TextBlock Text="End NPC" Grid.Row="5" Grid.Column="0" Margin="0,5,10,5" VerticalAlignment="Center"/>
+                    <ComboBox Text="masa_saimayor" Grid.Row="5" Grid.Column="1" Margin="0,5,0,5" Background="#333333"/>
+                </Grid>
+
+                <TextBlock Text="Location" Grid.Row="2" Margin="0,10,0,5"/>
+
+                <!-- Dialog Sections -->
+                <StackPanel Grid.Row="3" Margin="0,10,0,0">
+                    <TextBlock Text="Quest Complete Dialog" Foreground="Yellow" Margin="0,0,0,5"/>
+                    <TextBox Text="Thank you, you did a great job." Height="60" Background="#333333" TextWrapping="Wrap"/>
+                    
+                    <TextBox Text="Dialog" Height="60" Background="#1A1A1A" Margin="0,5" TextWrapping="Wrap"/>
+                    <TextBox Text="Dialog" Height="60" Background="#1A1A1A" Margin="0,5" TextWrapping="Wrap"/>
+
+                    <TextBlock Text="Quest Fail Dialog" Foreground="Yellow" Margin="0,10,0,5"/>
+                    <TextBox Text="It is very easy to find the entrance of the temple in Fantasy Desert." Height="60" Background="#333333" TextWrapping="Wrap"/>
+                    
+                    <TextBox Text="Dialog" Height="60" Background="#1A1A1A" Margin="0,5" TextWrapping="Wrap"/>
+                    <TextBox Text="Dialog" Height="60" Background="#1A1A1A" Margin="0,5" TextWrapping="Wrap"/>
+                </StackPanel>
+            </Grid>
+        </ScrollViewer>
+
+        <!-- Vertikale Linie -->
+        <Rectangle Grid.Column="1" Width="1" Fill="#404040" Margin="0,10"/>
+
+        <!-- Rechte Seite -->
+        <ScrollViewer Grid.Column="2" VerticalScrollBarVisibility="Auto">
+            <Grid Margin="10">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+
+                <!-- Quest Dialog Section -->
+                <StackPanel Grid.Row="0">
+                    <TextBlock Text="Quest Introduction Dialog" Foreground="Yellow" Margin="0,0,0,5"/>
+                    <TextBox TextWrapping="Wrap" Height="60" Background="#333333" 
+                             Text="Excuse me. If you are not busy, would you please listen to my story? Have"/>
+                    
+                    <TextBox TextWrapping="Wrap" Height="60" Background="#333333" Margin="0,5"
+                             Text="The Ivillis Temple was built by the followers of Ivillis, a leader from be"/>
+                    
+                    <TextBox TextWrapping="Wrap" Height="60" Background="#333333" Margin="0,5"
+                             Text="The temple is located in the Fantasy Desert, in the southern part of Saint"/>
+                    
+                    <TextBox TextWrapping="Wrap" Height="60" Background="#333333" Margin="0,5"
+                             Text="You see…every mayor has to explore all the Islands of Madrigal. In the cou"/>
+                    
+                    <TextBox TextWrapping="Wrap" Height="60" Background="#333333" Margin="0,5"
+                             Text="Would you please help me? I beg of you."/>
+
+                    <TextBlock Text="Quest Accept Dialog" Foreground="Yellow" Margin="0,10,0,5"/>
+                    <TextBox TextWrapping="Wrap" Height="60" Background="#333333"
+                             Text="Thank you! Please, investigate the entrance of the temple for anything dan"/>
+
+                    <TextBlock Text="Quest Deny Dialog" Foreground="Yellow" Margin="0,10,0,5"/>
+                    <TextBox TextWrapping="Wrap" Height="60" Background="#333333"
+                             Text="I cannot force you to help me if you are busy. But maybe, when you have th"/>
+
+                    <TextBlock Text="Quest Details (Active)" Foreground="Gray" Margin="0,10,0,5"/>
+                    <TextBox Text="Quest Detail" Height="60" Background="#1A1A1A"/>
+
+                    <TextBlock Text="Quest Details (Finished)" Foreground="Yellow" Margin="0,10,0,5"/>
+                    <TextBox Text="Quest Detail" Height="60" Background="#1A1A1A"/>
+                </StackPanel>
+
+                <!-- Begin Conditions Section -->
+                <StackPanel Grid.Row="1" Margin="0,20,0,0">
+                    <TextBlock Text="Begin Conditions" Foreground="#00A2FF" FontSize="16" Margin="0,0,0,10"/>
+                    
+                    <Grid>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                            <RowDefinition Height="Auto"/>
+                        </Grid.RowDefinitions>
+
+                        <TextBlock Text="General" Grid.Row="0" Grid.Column="0" Margin="0,0,10,5" Foreground="Yellow"/>
+
+                        <TextBlock Text="Level" Grid.Row="1" Grid.Column="0" Margin="0,0,10,5"/>
+                        <StackPanel Grid.Row="1" Grid.Column="1" Orientation="Horizontal">
+                            <TextBox Text="45" Width="50" Background="#333333"/>
+                            <TextBox Text="70" Width="50" Margin="5,0,0,0" Background="#333333"/>
+                        </StackPanel>
+
+                        <TextBlock Text="Sex" Grid.Row="2" Grid.Column="0" Margin="0,5,10,5"/>
+                        <ComboBox Text="Any" Grid.Row="2" Grid.Column="1" Background="#333333"/>
+
+                        <TextBlock Text="Required Skill" Grid.Row="3" Grid.Column="0" Margin="0,5,10,5"/>
+                        <ComboBox Text="[None]" Grid.Row="3" Grid.Column="1" Background="#333333"/>
+
+                        <TextBlock Text="Skill Level" Grid.Row="4" Grid.Column="0" Margin="0,5,10,5"/>
+                        <TextBox Text="0" Grid.Row="4" Grid.Column="1" Background="#333333"/>
+
+                        <TextBlock Text="Min. PK Value" Grid.Row="5" Grid.Column="0" Margin="0,5,10,5"/>
+                        <TextBox Text="0" Grid.Row="5" Grid.Column="1" Background="#333333"/>
+                    </Grid>
+
+                    <!-- Party and Guild Settings -->
+                    <Grid Margin="0,20,0,0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+
+                        <!-- Party Settings -->
+                        <StackPanel Grid.Column="0" Margin="0,0,5,0">
+                            <TextBlock Text="Party Settings" Foreground="Yellow"/>
+                            <ComboBox Text="Ignore" Background="#333333" Margin="0,5"/>
+                            <CheckBox Content="Party Leader" Margin="0,5"/>
+                            <TextBlock Text="Type" Margin="0,5,0,0"/>
+                            <ComboBox Text="Exact Amount" Background="#333333" Margin="0,5"/>
+                            <TextBlock Text="Amount" Margin="0,5,0,0"/>
+                            <TextBox Text="0" Background="#333333"/>
+                        </StackPanel>
+
+                        <!-- Guild Settings -->
+                        <StackPanel Grid.Column="1" Margin="5,0,0,0">
+                            <TextBlock Text="Guild Settings" Foreground="Yellow"/>
+                            <ComboBox Text="Ignore" Background="#333333" Margin="0,5"/>
+                            <CheckBox Content="Guild Leader" Margin="0,5"/>
+                            <TextBlock Text="Type" Margin="0,5,0,0"/>
+                            <ComboBox Text="Exact Amount" Background="#333333" Margin="0,5"/>
+                            <TextBlock Text="Amount" Margin="0,5,0,0"/>
+                            <TextBox Text="0" Background="#333333"/>
+                        </StackPanel>
+                    </Grid>
+
+                    <!-- Job Settings -->
+                    <StackPanel Margin="0,20,0,0">
+                        <TextBlock Text="Job Settings" Foreground="Yellow"/>
+                        <Grid Margin="0,5,0,0">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="Auto"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="Auto"/>
+                            </Grid.RowDefinitions>
+
+                            <TextBlock Text="Job Class" Grid.Row="0" Grid.Column="0" Margin="0,0,10,5"/>
+                            <ComboBox Grid.Row="0" Grid.Column="1" Background="#333333"/>
+
+                            <TextBlock Text="Required Job Class" Grid.Row="1" Grid.Column="0" Margin="0,5,10,5"/>
+                            <ComboBox Grid.Row="1" Grid.Column="1" Background="#333333"/>
+                        </Grid>
+                    </StackPanel>
+                </StackPanel>
+            </Grid>
+        </ScrollViewer>
     </Grid>
 </Page> 
